Build only selfie segmentation

--- a/mediapipe/examples/desktop/libmp/BUILD
+++ b/mediapipe/examples/desktop/libmp/BUILD
@@ -21,52 +21,52 @@ package(default_visibility = ["//mediapipe/examples:__subpackages__"])
 
 BIN_DATA = [
     # Face detection
-    "//mediapipe/modules/face_detection:face_detection_full_range.tflite",
-    "//mediapipe/modules/face_detection:face_detection_full_range_sparse.tflite",
-    "//mediapipe/modules/face_detection:face_detection_short_range.tflite",
+    # "//mediapipe/modules/face_detection:face_detection_full_range.tflite",
+    # "//mediapipe/modules/face_detection:face_detection_full_range_sparse.tflite",
+    # "//mediapipe/modules/face_detection:face_detection_short_range.tflite",
 
     # Face mesh
-    "//mediapipe/modules/face_landmark:face_landmark.tflite",
-    "//mediapipe/modules/face_landmark:face_landmark_with_attention.tflite",
+    # "//mediapipe/modules/face_landmark:face_landmark.tflite",
+    # "//mediapipe/modules/face_landmark:face_landmark_with_attention.tflite",
 
     # Hand landmark
-    "//mediapipe/modules/hand_landmark:hand_landmark_full.tflite",
-    "//mediapipe/modules/hand_landmark:hand_landmark_lite.tflite",
+    # "//mediapipe/modules/hand_landmark:hand_landmark_full.tflite",
+    # "//mediapipe/modules/hand_landmark:hand_landmark_lite.tflite",
 
     # Holistic
-    "//mediapipe/modules/holistic_landmark:hand_recrop.tflite",
+    # "//mediapipe/modules/holistic_landmark:hand_recrop.tflite",
 
     # Iris
-    "//mediapipe/modules/iris_landmark:iris_landmark.tflite",
+    # "//mediapipe/modules/iris_landmark:iris_landmark.tflite",
 
     # Object detection
-    "//mediapipe/models:ssdlite_object_detection.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_camera.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_chair.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_chair_1stage.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_cup.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_sneakers.tflite",
-    "//mediapipe/modules/objectron:object_detection_3d_sneakers_1stage.tflite",
-    "//mediapipe/modules/objectron:object_detection_ssd_mobilenetv2_oidv4_fp16.tflite",
+    # "//mediapipe/models:ssdlite_object_detection.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_camera.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_chair.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_chair_1stage.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_cup.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_sneakers.tflite",
+    # "//mediapipe/modules/objectron:object_detection_3d_sneakers_1stage.tflite",
+    # "//mediapipe/modules/objectron:object_detection_ssd_mobilenetv2_oidv4_fp16.tflite",
 
     # Palm detection
-    "//mediapipe/modules/palm_detection:palm_detection_full.tflite",
-    "//mediapipe/modules/palm_detection:palm_detection_lite.tflite",
-    
+    # "//mediapipe/modules/palm_detection:palm_detection_full.tflite",
+    # "//mediapipe/modules/palm_detection:palm_detection_lite.tflite",
+
     # Pose detection
-    "//mediapipe/modules/pose_detection:pose_detection.tflite",
+    # "//mediapipe/modules/pose_detection:pose_detection.tflite",
 
     # Pose landmark
-    "//mediapipe/modules/pose_landmark:pose_landmark_full.tflite",
-    "//mediapipe/modules/pose_landmark:pose_landmark_heavy.tflite",
-    "//mediapipe/modules/pose_landmark:pose_landmark_lite.tflite",
+    # "//mediapipe/modules/pose_landmark:pose_landmark_full.tflite",
+    # "//mediapipe/modules/pose_landmark:pose_landmark_heavy.tflite",
+    # "//mediapipe/modules/pose_landmark:pose_landmark_lite.tflite",
 
     # Selfie segmentation
     "//mediapipe/modules/selfie_segmentation:selfie_segmentation.tflite",
-    "//mediapipe/modules/selfie_segmentation:selfie_segmentation_landscape.tflite",
+    # "//mediapipe/modules/selfie_segmentation:selfie_segmentation_landscape.tflite",
 
     # Hair segmentation
-    "//mediapipe/models:hair_segmentation.tflite",
+    # "//mediapipe/models:hair_segmentation.tflite",
 ]
 
 LIB_DEPS = [
@@ -79,48 +79,48 @@ LIB_DEPS = [
     "//mediapipe/graphs/selfie_segmentation:selfie_segmentation_cpu_deps",
 
     # Hand tracking
-    "//mediapipe/modules/hand_landmark:hand_landmark_tracking_cpu",
-    "//mediapipe/calculators/util:annotation_overlay_calculator",
-    "//mediapipe/calculators/util:detections_to_render_data_calculator",
+    # "//mediapipe/modules/hand_landmark:hand_landmark_tracking_cpu",
+    # "//mediapipe/calculators/util:annotation_overlay_calculator",
+    # "//mediapipe/calculators/util:detections_to_render_data_calculator",
 
     # Face detection
-    "//mediapipe/graphs/face_detection:face_detection_full_range_desktop_live_deps",
+    # "//mediapipe/graphs/face_detection:face_detection_full_range_desktop_live_deps",
 
     # Face mesh
-    "//mediapipe/graphs/face_mesh:desktop_live_calculators",
+    # "//mediapipe/graphs/face_mesh:desktop_live_calculators",
 
     # Face geometry (thanks, @oUp2Uo!)
     # - Fixes from https://github.com/google/mediapipe/issues/2867 have been applied,
     #   allowing for use of face mesh with attention (discards the 10 iris landmarks)
     # - See https://github.com/google/mediapipe/issues/1162#issuecomment-1434268379 for details
-    "//mediapipe/modules/face_geometry:face_geometry_from_detection",
-    "//mediapipe/modules/face_geometry:env_generator_calculator",
-    "//mediapipe/modules/face_geometry:geometry_pipeline_calculator",
+    # "//mediapipe/modules/face_geometry:face_geometry_from_detection",
+    # "//mediapipe/modules/face_geometry:env_generator_calculator",
+    # "//mediapipe/modules/face_geometry:geometry_pipeline_calculator",
 
     # Hair segmentation
-    "//mediapipe/graphs/hair_segmentation:desktop_calculators",
+    # "//mediapipe/graphs/hair_segmentation:desktop_calculators",
 
     # Holistic tracking
-    "//mediapipe/graphs/holistic_tracking:holistic_tracking_cpu_graph_deps",
+    # "//mediapipe/graphs/holistic_tracking:holistic_tracking_cpu_graph_deps",
 
     # Iris tracking
-    "//mediapipe/graphs/iris_tracking:iris_tracking_cpu_deps",
+    # "//mediapipe/graphs/iris_tracking:iris_tracking_cpu_deps",
 
     # Object detection
-    "//mediapipe/calculators/core:concatenate_vector_calculator",
-    "//mediapipe/calculators/core:flow_limiter_calculator",
-    "//mediapipe/calculators/core:previous_loopback_calculator",
-    "//mediapipe/calculators/core:split_vector_calculator",
-    "//mediapipe/calculators/image:image_transformation_calculator",
-    "//mediapipe/calculators/tflite:ssd_anchors_calculator",
-    "//mediapipe/calculators/tflite:tflite_converter_calculator",
-    "//mediapipe/calculators/tflite:tflite_inference_calculator",
-    "//mediapipe/calculators/tflite:tflite_tensors_to_detections_calculator",
-    "//mediapipe/calculators/util:detection_label_id_to_text_calculator",
-    "//mediapipe/calculators/util:non_max_suppression_calculator",
+    # "//mediapipe/calculators/core:concatenate_vector_calculator",
+    # "//mediapipe/calculators/core:flow_limiter_calculator",
+    # "//mediapipe/calculators/core:previous_loopback_calculator",
+    # "//mediapipe/calculators/core:split_vector_calculator",
+    # "//mediapipe/calculators/image:image_transformation_calculator",
+    # "//mediapipe/calculators/tflite:ssd_anchors_calculator",
+    # "//mediapipe/calculators/tflite:tflite_converter_calculator",
+    # "//mediapipe/calculators/tflite:tflite_inference_calculator",
+    # "//mediapipe/calculators/tflite:tflite_tensors_to_detections_calculator",
+    # "//mediapipe/calculators/util:detection_label_id_to_text_calculator",
+    # "//mediapipe/calculators/util:non_max_suppression_calculator",
 
     # Pose tracking
-    "//mediapipe/graphs/pose_tracking:pose_tracking_cpu_deps",
+    # "//mediapipe/graphs/pose_tracking:pose_tracking_cpu_deps",
 ]
 
 cc_binary(
@@ -129,8 +129,15 @@ cc_binary(
     ],
     name = "libmp.so",
     deps = [":libmp_linux"],
-    data = BIN_DATA,
+    linkshared = 1, ## Very important
     linkopts = ["-Wl,-soname,libmp.so"],
+)
+cc_binary(
+    target_compatible_with = [
+        "@platforms//os:macos",
+    ],
+    name = "libmp.dylib",
+    deps = [":libmp_macos"],
     linkshared = 1, ## Very important
 )
 cc_binary(
@@ -139,7 +146,6 @@ cc_binary(
     ],
     name = "libmp.dll",
     deps = [":libmp_win"],
-    data = BIN_DATA,
     linkshared = 1, ## Very important
 )
 
@@ -152,6 +158,21 @@ cc_library(
     hdrs = ["libmp.h", "libmp_impl.h"],
     visibility = ["//visibility:public"],
     deps = LIB_DEPS,
+    data = BIN_DATA,
+    linkstatic = 1,
+    alwayslink = 1,
+)
+cc_library(
+    target_compatible_with = [
+        "@platforms//os:macos",
+    ],
+    name = "libmp_macos",
+    srcs = ["libmp.cpp", "libmp_impl.cpp"],
+    hdrs = ["libmp.h", "libmp_impl.h"],
+    visibility = ["//visibility:public"],
+    deps = LIB_DEPS,
+    data = BIN_DATA,
+    linkstatic = 1,
     alwayslink = 1,
 )
 cc_library(
@@ -163,6 +184,8 @@ cc_library(
     hdrs = ["libmp.h", "libmp_impl.h"],
     visibility = ["//visibility:public"],
     deps = LIB_DEPS,
-    defines = ["COMPILING_DLL=1"],
+    data = BIN_DATA,
+    linkstatic = 1,
     alwayslink = 1,
+    defines = ["COMPILING_DLL=1"],
 )
