Fixed the model file path

--- a/mediapipe/modules/selfie_segmentation/BUILD
+++ b/mediapipe/modules/selfie_segmentation/BUILD
@@ -25,9 +25,18 @@ licenses(["notice"])
 
 package(default_visibility = ["//visibility:public"])
 
+filegroup(
+    name = "selected_selfie_segmentation_model_loader",
+    srcs = select({
+        "@platforms//os:macos": ["selfie_segmentation_model_loader_mac.pbtxt"],
+        "@platforms//os:windows": ["selfie_segmentation_model_loader_win.pbtxt"],
+        "//conditions:default": ["selfie_segmentation_model_loader.pbtxt"],
+    }),
+)
+
 mediapipe_simple_subgraph(
     name = "selfie_segmentation_model_loader",
-    graph = "selfie_segmentation_model_loader.pbtxt",
+    graph = ":selected_selfie_segmentation_model_loader",
     register_as = "SelfieSegmentationModelLoader",
     deps = [
         "//mediapipe/calculators/core:constant_side_packet_calculator",
